2011-12-03	Ralf Corsépius <ralf.corsepius@rtems.org>

	* posix/src/pthread.c (_POSIX_Threads_Default_attributes): Add
	missing initializer.
	* posix/src/pthread.c: Make 
	_POSIX_Threads_Create_extension,_POSIX_Threads_Delete_extension,
	_POSIX_Threads_Exitted_extension,
	_POSIX_Threads_Initialize_user_threads static.

2011-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libcsupport/include/rtems/libcsupport.h: 
	Add prototype of malloc_info().
	* libfs/src/imfs/deviceerrno.c: 
	Include <rtems/devfs.h> for missing prototypes.
	* libfs/src/rfs/rtems-rfs-rtems-dev.c:
	Remove duplicate prototype of rtems_deviceio_errno. 
	Include <rtems/devfs.h> for rtems_deviceio_errno().

2011-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>
 
	* score/src/rbtreeextract.c: 
	Make _RBTree_Extract_validate_unprotected static.
	* score/src/rbtreeinsert.c:
	Make _RBTree_Validate_insert_unprotected static.

2011-12-02	Joel Sherrill <joel.sherrill@oarcorp.com>

	* libcsupport/include/sys/termios.h: Add _POSIX_VDISABLE.

2011-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/src/tasks.c: Make _RTEMS_tasks_Create_extension,
	_RTEMS_tasks_Start_extension, _RTEMS_tasks_Delete_extension,
	_RTEMS_tasks_Switch_extension, _RTEMS_tasks_Post_switch_extension
	static.
	* score/src/scheduleredf.c: Make _Scheduler_EDF_RBTree_compare_function
	static.

2011-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libfs/src/imfs/imfs_eval.c: Make IMFS_evaluate_permission,
	IMFS_evaluate_hard_link, IMFS_evaluate_sym_link static.
	* libfs/src/imfs/imfs_fifo.c: Make IMFS_fifo_open,
	IMFS_fifo_close, IMFS_fifo_read, IMFS_fifo_write,
	IMFS_fifo_ioctl static.

2011-12-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* aclocal/check-smp.m4: Fix bogus log message.

2011-12-01	Ralf Corsépius <ralf.corsepius@rtems.org>

	* libnetworking/rtems/mkrootfs.c: Use mode_t for modes, 
	Use size_t for sizes.
	* libcsupport/src/open.c: Use va_arg(..., mode_t) to retrieve mode.