@@ -6,14 +6,8 @@
 #include "config.h"
 #endif
 
-#include <limits.h>
-#include <errno.h>
-#include <string.h>
-#include <sys/types.h>
-
-#include <rtems/system.h>
+#include <unistd.h>
 #include <rtems/score/object.h>
-#include <rtems/seterr.h>
 
 /*
  *  4.3.1 Get Process Group IDs, P1003.1b-1993, p. 89
